--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 yacs==0.1.4
-numpy==1.21.6 # revised 1.22.0
-torchvision==0.2.1
+# numpy==1.21.6 # revised 1.22.0
+# torchvision==0.2.1
 opencv-python==3.4.2.17
 tqdm==4.28.1
 pycocotools==2.0.0
@@ -15,4 +15,4 @@ pyassimp==3.3
 progressbar==2.5
 open3d-python==0.5.0.0
 tensorboardX==1.2
-cffi==1.11.5
+# cffi==1.11.5
